force-app/main/default/objects/Lead/fields/LPCR_Activite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Activite__c</fullName>
    <label>Activité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>