force-app/main/default/objects/Lead/fields/LPCR_AgeEnfants__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AgeEnfants__c</fullName>
    <label>Age des enfants</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 4 ans</fullName>
            </value>
            <value>
                <fullName>4-8 ans</fullName>
            </value>
            <value>
                <fullName>8-12 ans</fullName>
            </value>
            <value>
                <fullName>&gt; 12 ans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>