force-app/main/default/objects/Lead/fields/LPCR_AmplitudeHoraireMardi3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireMardi3__c</fullName>
    <label>Amplitude horaire mardi enfant 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Amplitude_Horaire</valueSetName>
    </valueSet>
</CustomField>