force-app/main/default/objects/Lead/fields/LPCR_AmplitudeHoraireMercredi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireMercredi1__c</fullName>
    <label>Amplitude horaire mercredi enfant 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_AmplitudeHoraire</valueSetName>
    </valueSet>
</CustomField>