force-app/main/default/objects/Lead/fields/LPCR_AmplitudeHoraireMercredi2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireMercredi2__c</fullName>
    <label>Amplitude horaire mercredi enfant 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_AmplitudeHoraire</valueSetName>
    </valueSet>
</CustomField>