force-app/main/default/objects/Lead/fields/LPCR_AmplitudeHoraireVendredi1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireVendredi1__c</fullName>
    <label>Amplitude horaire vendredi enfant 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Amplitude_Horaire</valueSetName>
    </valueSet>
</CustomField>