force-app/main/default/objects/Lead/fields/LPCR_AmplitudeHoraireVendredi2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AmplitudeHoraireVendredi2__c</fullName>
    <label>Amplitude horaire vendredi enfant 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Amplitude_Horaire</valueSetName>
    </valueSet>
</CustomField>