force-app/main/default/objects/Lead/fields/LPCR_AnneeImpactBudget__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AnneeImpactBudget__c</fullName>
    <label>Année impact budget</label>
    <length>4</length>
    <type>Text</type>
</CustomField>