force-app/main/default/objects/Lead/fields/LPCR_AutreOrigine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AutreOrigine__c</fullName>
    <label>Autre Origine</label>
    <length>80</length>
    <type>Text</type>
</CustomField>