force-app/main/default/objects/Lead/fields/LPCR_AutresEnfantsFoyer__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AutresEnfantsFoyer__c</fullName>
    <label>Autres enfants au foyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>