force-app/main/default/objects/Lead/fields/LPCR_AutreTypeStructure__c.field-meta.xml
<CustomField>
    <fullName>LPCR_AutreTypeStructure__c</fullName>
    <label>Autre type de structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>