force-app/main/default/objects/Lead/fields/LPCR_BerceauxConcurrence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BerceauxConcurrence__c</fullName>
    <label>Nombre de berceaux à  la concurrence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>