force-app/main/default/objects/Lead/fields/LPCR_Capital__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Capital__c</fullName>
    <label>Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>