force-app/main/default/objects/Lead/fields/LPCR_ChargeAffaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChargeAffaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Attribution au chargé d&#39;affaire</inlineHelpText>
    <label>Chargé d&#39;affaire</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>