force-app/main/default/objects/Lead/fields/LPCR_ChoixEntrepriseConversion__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ChoixEntrepriseConversion__c</fullName>
    <label>Choix entreprise pour la conversion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A définir</fullName>
                <default>true</default>
                <label>A définir</label>
            </value>
            <value>
                <fullName>Parent 1</fullName>
            </value>
            <value>
                <fullName>Parent 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>