force-app/main/default/objects/Lead/fields/LPCR_CiviliteCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CiviliteCoDemandeur__c</fullName>
    <label>Civilité co-demandeur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mme</fullName>
            </value>
            <value>
                <fullName>M</fullName>
                <label>M.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>