force-app/main/default/objects/Lead/fields/LPCR_CodeAPE__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeAPE__c</fullName>
    <label>Code APE</label>
    <length>64</length>
    <type>Text</type>
</CustomField>