force-app/main/default/objects/Lead/fields/LPCR_CodeCreche1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeCreche1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_CodeCreche1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (LPCR_CodeCreche1)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>