force-app/main/default/objects/Lead/fields/LPCR_CodeCreche2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeCreche2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_CodeCreche2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (LPCR_CodeCreche2)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>