force-app/main/default/objects/Lead/fields/LPCR_CodeCreche3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeCreche3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LPCR_CodeCreche3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (LPCR_CodeCreche3)</relationshipLabel>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>