force-app/main/default/objects/Lead/fields/LPCR_CodeCrecheLienCrecheLead2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeCrecheLienCrecheLead2__c</fullName>
    <description>Champ à utiliser pour permettre la création d&apos;un enregistrement Lien Crèche-Lead 2 associé</description>
    <label>Code Crèche Lien Crèche Lead 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>