force-app/main/default/objects/Lead/fields/LPCR_CodePostalSociete__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePostalSociete__c</fullName>
    <label>Code postal société</label>
    <length>10</length>
    <type>Text</type>
</CustomField>