force-app/main/default/objects/Lead/fields/LPCR_CodePostalSocieteCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodePostalSocieteCoDemandeur__c</fullName>
    <label>Code postal société co-demandeur</label>
    <length>25</length>
    <type>Text</type>
</CustomField>