force-app/main/default/objects/Lead/fields/LPCR_Commentaire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>