force-app/main/default/objects/Lead/fields/LPCR_CompteSociete__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteSociete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte Société</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>