force-app/main/default/objects/Lead/fields/LPCR_CompteSocieteCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteSocieteCoDemandeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte entreprise co-demandeur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Compte Entreprise Représentant 2)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>