force-app/main/default/objects/Lead/fields/LPCR_CompteSocieteIdExterne__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CompteSocieteIdExterne__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>