force-app/main/default/objects/Lead/fields/LPCR_Concurrence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Concurrence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travaille avec la concurrence</label>
    <type>Checkbox</type>
</CustomField>