force-app/main/default/objects/Lead/fields/LPCR_Connu__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Connu__c</fullName>
    <label>Comment nous avez-vous connu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recherche Google</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>En passant devant une crèche</fullName>
            </value>
            <value>
                <fullName>Publicité</fullName>
            </value>
            <value>
                <fullName>Salon</fullName>
            </value>
            <value>
                <fullName>Bouche à oreille</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>