force-app/main/default/objects/Lead/fields/LPCR_ConvertedOpp__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ConvertedOpp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom opportunité famille suite conversion</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>