force-app/main/default/objects/Lead/fields/LPCR_DateDebutExploitation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateDebutExploitation__c</fullName>
    <label>Date de début d&apos;exploitation</label>
    <type>Date</type>
</CustomField>