force-app/main/default/objects/Lead/fields/LPCR_DateEntreeCreche1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntreeCreche1__c</fullName>
    <label>Date d&#39;entrée en crèche enfant 1</label>
    <type>Date</type>
</CustomField>