force-app/main/default/objects/Lead/fields/LPCR_DateEntreeCreche2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntreeCreche2__c</fullName>
    <label>Date d&#39;entrée en crèche enfant 2</label>
    <type>Date</type>
</CustomField>