force-app/main/default/objects/Lead/fields/LPCR_DateEntreeCreche3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateEntreeCreche3__c</fullName>
    <label>Date d&apos;entrée en crèche enfant 3</label>
    <type>Date</type>
</CustomField>