force-app/main/default/objects/Lead/fields/LPCR_DateLimiteCommerce__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateLimiteCommerce__c</fullName>
    <formula>IF(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7) &lt;= 1, DATEVALUE(CreatedDate)+5, 
							DATEVALUE(CreatedDate)+7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date limite traitement commerce</label>
    <type>Date</type>
</CustomField>