force-app/main/default/objects/Lead/fields/LPCR_DateNaissance1__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateNaissance1__c</fullName>
    <label>Date de naissance enfant 1</label>
    <type>Date</type>
</CustomField>