force-app/main/default/objects/Lead/fields/LPCR_DateNaissance2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateNaissance2__c</fullName>
    <label>Date de naissance enfant 2</label>
    <type>Date</type>
</CustomField>