force-app/main/default/objects/Lead/fields/LPCR_DateNaissance3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateNaissance3__c</fullName>
    <label>Date de naissance enfant 3</label>
    <type>Date</type>
</CustomField>