force-app/main/default/objects/Lead/fields/LPCR_DatePriseEnChargeCommercial__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DatePriseEnChargeCommercial__c</fullName>
    <label>Date prise en charge commercial</label>
    <type>Date</type>
</CustomField>