force-app/main/default/objects/Lead/fields/LPCR_DatePriseEnChargeServiceFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DatePriseEnChargeServiceFamille__c</fullName>
    <label>Date prise en charge service famille</label>
    <type>Date</type>
</CustomField>