force-app/main/default/objects/Lead/fields/LPCR_DatePublication__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DatePublication__c</fullName>
    <label>Date de la publication</label>
    <type>Date</type>
</CustomField>