force-app/main/default/objects/Lead/fields/LPCR_DateRemiseConcurrence__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateRemiseConcurrence__c</fullName>
    <label>Date prévue de remise en concurrence</label>
    <type>Date</type>
</CustomField>