force-app/main/default/objects/Lead/fields/LPCR_DateTransfertServiceFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DateTransfertServiceFamille__c</fullName>
    <label>Date de transfert service famuille</label>
    <type>DateTime</type>
</CustomField>