force-app/main/default/objects/Lead/fields/LPCR_DebutContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DebutContrat__c</fullName>
    <label>Début du contrat</label>
    <type>Date</type>
</CustomField>