force-app/main/default/objects/Lead/fields/LPCR_DelaiPriseChargeServiceFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DelaiPriseEnChargeServiceFamille__c</fullName>
    <description>Formule</description>
    <formula>LPCR_DatePriseEnChargeServiceFamille__c-DATEVALUE(LPCR_DateTransfertServiceFamille__c)</formula>
    <label>Délai prise en charge service famille</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>