force-app/main/default/objects/Lead/fields/LPCR_DelaiPriseEnChargeCommercial__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DelaiPriseEnChargeCommercial__c</fullName>
    <formula>LPCR_DatePriseEnChargeCommercial__c -DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai prise en charge commercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>