force-app/main/default/objects/Lead/fields/LPCR_DelaiTraitement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DelaiTraitement__c</fullName>
    <label>Délai De Traitement (jours ouvrés)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>