force-app/main/default/objects/Lead/fields/LPCR_DelaiTraitementCommercial__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DelaiTraitementCommercial__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai de traitement commercial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>