force-app/main/default/objects/Lead/fields/LPCR_DelaiTraitementServiceFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DelaiTraitementServiceFamille__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Délai de traitement service famille</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>