force-app/main/default/objects/Lead/fields/LPCR_Departement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Departement__c</fullName>
    <formula>IF(BEGINS(PostalCode,&#39;97&#39;),LEFT(PostalCode,3),LEFT(PostalCode,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Département</label>
    <type>Text</type>
</CustomField>