force-app/main/default/objects/Lead/fields/LPCR_DetailDuree__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DetailDuree__c</fullName>
    <label>Détail durée</label>
    <length>255</length>
    <type>Text</type>
</CustomField>