force-app/main/default/objects/Lead/fields/LPCR_DispositifsExistants__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DispositifsExistants__c</fullName>
    <label>Dispositifs existants DEL</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>Travaille avec la concurrence</fullName>
            </value>
            <value>
                <fullName>Accompagnement scolaire</fullName>
                <isActive>false</isActive>
                <label>Accompagnement scolaire</label>
            </value>
            <value>
                <fullName>Chèque CESU</fullName>
                <isActive>false</isActive>
                <label>Chèque CESU</label>
            </value>
            <value>
                <fullName>Conciergerie</fullName>
                <isActive>false</isActive>
                <label>Conciergerie</label>
            </value>
            <value>
                <fullName>Conférences / Ateliers parentalité</fullName>
                <isActive>false</isActive>
                <label>Conférences / Ateliers parentalité</label>
            </value>
            <value>
                <fullName>Garde d’enfants périscolaire</fullName>
                <isActive>false</isActive>
                <label>Garde d’enfants périscolaire</label>
            </value>
            <value>
                <fullName>Place en crèche</fullName>
                <isActive>false</isActive>
                <label>Place en crèche</label>
            </value>
            <value>
                <fullName>Plateforme service à la personne</fullName>
                <isActive>false</isActive>
                <label>Plateforme service à la personne</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>