force-app/main/default/objects/Lead/fields/LPCR_DureeContrat__c.field-meta.xml
<CustomField>
    <fullName>LPCR_DureeContrat__c</fullName>
    <label>Durée du contrat</label>
    <type>Date</type>
</CustomField>