force-app/main/default/objects/Lead/fields/LPCR_EmailCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_EmailCoDemandeur__c</fullName>
    <label>Email co-demandeur</label>
    <type>Email</type>
</CustomField>