force-app/main/default/objects/Lead/fields/LPCR_Enjeux__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Enjeux__c</fullName>
    <label>Enjeux</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualité de vie au travail</fullName>
            </value>
            <value>
                <fullName>Efficacité /engagement des collaborateurs</fullName>
            </value>
            <value>
                <fullName>Fidélisation des talents</fullName>
            </value>
            <value>
                <fullName>Amélioration de la marque employeur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>