force-app/main/default/objects/Lead/fields/LPCR_ExternalId_Lead__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ExternalId_Lead__c</fullName>
    <label>ID externe</label>
    <length>180</length>
    <type>Text</type>
</CustomField>