force-app/main/default/objects/Lead/fields/LPCR_FicheSparklane__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FicheSparklane__c</fullName>
    <label>Lien fiche Sparklane</label>
    <length>256</length>
    <type>Html</type>
</CustomField>