force-app/main/default/objects/Lead/fields/LPCR_Fonction__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Fonction__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LPCR_TypeFonction__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LPCR_Fonction</valueSetName>
    </valueSet>
</CustomField>