force-app/main/default/objects/Lead/fields/LPCR_FonctionCoDemandeur__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FonctionCoDemandeur__c</fullName>
    <label>Fonction co-demandeur</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LPCR_TypeFonctionCoDemandeur__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LPCR_Fonction</valueSetName>
    </valueSet>
</CustomField>