force-app/main/default/objects/Lead/fields/LPCR_FormeJuridique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_FormeJuridique__c</fullName>
    <label>Forme juridique</label>
    <length>120</length>
    <type>Text</type>
</CustomField>