force-app/main/default/objects/Lead/fields/LPCR_IDAO__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IDAO__c</fullName>
    <label>ID AO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>