force-app/main/default/objects/Lead/fields/LPCR_IdentifiantTeteGroupe__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdentifiantTeteGroupe__c</fullName>
    <label>Identifiant tête de groupe</label>
    <length>120</length>
    <type>Text</type>
</CustomField>