force-app/main/default/objects/Lead/fields/LPCR_IdExterne_ConvertedAccountId__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_ConvertedAccountId__c</fullName>
    <label>ID du compte converti</label>
    <length>50</length>
    <type>Text</type>
</CustomField>