force-app/main/default/objects/Lead/fields/LPCR_IdExterne_ConvertedContactId__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_ConvertedContactId__c</fullName>
    <label>ID du contact converti</label>
    <length>50</length>
    <type>Text</type>
</CustomField>