force-app/main/default/objects/Lead/fields/LPCR_IdExterne_ConvertedOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_ConvertedOpportunityId__c</fullName>
    <label>ID de l&apos;affaire converti</label>
    <length>50</length>
    <type>Text</type>
</CustomField>