force-app/main/default/objects/Lead/fields/LPCR_IdExterne_Creche2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Creche2__c</fullName>
    <description>Id externe crèche 2 alimenté par le formulaire web to lead famille</description>
    <label>ID Externe Crèche 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>